syntax = "proto3";

package api;

import "creator.proto";
option java_package = "api.application.grpc";
option java_outer_classname = "SubscriptionServiceProto";

service SubscriptionService {
  rpc CreateNivelSuscripcion (NivelSuscripcionRequest) returns (NivelSuscripcionResponse);
  rpc GetNiveles (Empty) returns (NivelSuscripcionListResponse);
}

message NivelSuscripcionRequest {
  string creatorId = 1;
  string tiposSuscripcion = 2;
  string descripcion = 3;
  double precioMensual = 4;
}

message NivelSuscripcionResponse {
  string id = 1;
  string descripcion = 2;
  string tiposSuscripcion = 3;
  double precioMensual = 4;
}



message NivelSuscripcionListResponse {
  repeated NivelSuscripcionResponse niveles = 1;
}
